--- a/playground_1/playground.css
+++ b/playground_1/playground.css
@@ -5,6 +5,11 @@
 body {
   background: #333;
   padding: 0;
-  margin: 0;
   overflow: hidden;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
